--- a/src/components/Restaurantinfo/Restaurantinfo.css
+++ b/src/components/Restaurantinfo/Restaurantinfo.css
@@ -1,15 +1,15 @@
 .restaurantname {
-  font-size: 24px;
+  font-size: 34px;
   font-weight: bold;
   margin: 20px 0;
-  margin-left: -25%;
+  /* margin-left: -2%; */
 
 }
 .infocard {
   border: 2 px solid #ddd;
   border-radius: 10px;
   padding: 20px;
-  height: 200px;
+  height: 220px;
   align-items: flex-start;
   background-color: #fff;
   box-shadow: 0 16px 15px rgba(0, 0, 0, 0.1);
