--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -1,7 +1,15 @@
 .loginsignup {
     width: 100%;
     height: 750px;
-    background: #fce3fc;
+    background: hsla(184, 82%, 51%, 1);
+
+    background: linear-gradient(90deg, hsla(184, 82%, 51%, 1) 0%, hsla(275, 77%, 70%, 1) 50%, hsla(351, 88%, 62%, 1) 100%);
+    
+    background: -moz-linear-gradient(90deg, hsla(184, 82%, 51%, 1) 0%, hsla(275, 77%, 70%, 1) 50%, hsla(351, 88%, 62%, 1) 100%);
+    
+    background: -webkit-linear-gradient(90deg, hsla(184, 82%, 51%, 1) 0%, hsla(275, 77%, 70%, 1) 50%, hsla(351, 88%, 62%, 1) 100%);
+    
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#1CDCE8", endColorstr="#BB77ED", GradientType=1 );
     padding-top: 100px;
     margin-bottom: 100px;
 }
@@ -78,7 +86,10 @@
 
 .error {
     color: #ff4141;
-    font-weight: 600;
+    font-weight: 500;
+    height: 1px;
+    margin-top: -4%;
+    margin-bottom: -2%;
 }
 
 .pass {
